feat: 增强主题配置并完善 Edge 自动化
- 新功能开发

  - 新增 Dark Mode 主题系统，支持预设模式与自定义模式（RGB/HEX/拾色板）并在阅读器实时生效。

  - 新增 Edge 主题自动化脚本 test:edge:theme，覆盖默认色、预设切换与自定义颜色链路。

- 交互与视觉优化

  - 将默认主题从极夜黑调整为石墨灰，保留极夜黑作为预设项。

  - 将自定义颜色改为第六个同尺寸卡片，点击后以可下拉展开的编辑区设置颜色。

  - 统一主题相关默认值与归一化逻辑，避免旧配置导致异常。

- 稳定性与测试修复

  - 修复目录展开后适应宽度测试的时序抖动，等待宽度收敛后再断言。

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -33,6 +33,33 @@
         <p class="hint">开启后：有目录则自动展开目录并将正文设为“适应宽度”；无目录则保持目录折叠。</p>
       </section>
 
+      <section class="card">
+        <h2>Dark Mode 主题色</h2>
+        <p class="hint">默认是石墨灰。可选择专业预设，或点击“自定义颜色”卡片后下拉编辑 RGB/HEX/拾色板。</p>
+
+        <div id="themePresetList" class="theme-presets" role="radiogroup" aria-label="预设主题色"></div>
+
+        <div id="customThemeDropdown" class="custom-theme-dropdown" hidden>
+          <div class="custom-theme">
+            <div class="custom-theme-head">
+              <span>自定义颜色</span>
+              <input id="customColorPicker" type="color" value="#121212" />
+            </div>
+
+            <div class="rgb-inputs">
+              <label>R<input id="customRInput" type="number" min="0" max="255" inputmode="numeric" /></label>
+              <label>G<input id="customGInput" type="number" min="0" max="255" inputmode="numeric" /></label>
+              <label>B<input id="customBInput" type="number" min="0" max="255" inputmode="numeric" /></label>
+            </div>
+
+            <label class="hex-input">
+              HEX
+              <input id="customHexInput" type="text" spellcheck="false" maxlength="7" placeholder="#121212" />
+            </label>
+          </div>
+        </div>
+      </section>
+
       <section class="grid">
         <div class="card">
           <h2>白名单（可选）</h2>
