feat: 新增 PDF 临时关闭改色开关
- 新功能开发

  - 在 PDF 顶部工具栏新增“临时关闭改色/恢复改色”按钮，支持一键在当前标签页切换原始配色与 Dark Mode 改色。

  - 切换行为仅作用当前页面会话，不写入全局设置，刷新或新开标签页仍默认启用改色。

- 交互与样式

  - 新增改色开关按钮的默认态/关闭态样式，并在关闭改色时将正文阅读区背景切回浅色，保持工具栏与目录暗色风格。

  - 通过 aria-pressed 和动态文案提升状态可见性（临时关闭改色/恢复改色）。

- 测试用例添加

  - 新增 Edge Playwright 自动化脚本 test-edge-color-toggle-playwright，覆盖网页 PDF 与本地 PDF 两条链路下的关闭/恢复改色验证。

  - 在 package.json 新增 test:edge:color-toggle 测试命令。

--- a/src/viewer/viewer.html
+++ b/src/viewer/viewer.html
@@ -52,6 +52,7 @@
         </div>
 
         <div class="toolbar-group">
+          <button id="colorToggleBtn" type="button" title="临时查看原始配色">临时关闭改色</button>
           <button id="optionsBtn" type="button">设置</button>
           <button id="outlineToggleBtn" type="button">目录</button>
         </div>
